[project]
name = "towpilot-scraper"
version = "0.1.0"
description = "FastAPI backend for scraping and enriching towing company leads"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "email-validator>=2.1.1",
    "sqlalchemy[asyncio]==2.0.25",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "supabase==2.3.0",
    "postgrest==0.13.0",
    "httpx==0.24.1",
    "aiohttp==3.9.1",
    "apscheduler==3.10.4",
    "playwright==1.41.0",
    "textual==0.66.0",
    "jinja2==3.1.3",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "python-dateutil==2.8.2",
    "structlog==24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "black",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

